# small-python-apps

./: LICENSE  README.md
contact_manager/: contacts.py  main.py  pyproject.toml  readme.md  requirements.txt  test_contact_manager.py
contact_manager/data/: contacts.csv  contacts.json  contacts_export.csv
currency_converter_Flask/: app.py  converter.py  pyproject.toml  readme.md  requirements.txt
currency_converter_Flask/templates/: index.html
currency_converter_GUI/: app.py  converter.py  pyproject.toml  readme.md  requirements.txt  widgets.py
