[tool.poetry]
name = "contacts"
version = "0.1.0"
description = ""
authors = ["Michal Puškáč <133041741+michalpuskac@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
tabulate = "^0.9.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
