[tool.poetry]
name = "poetryenv"
version = "0.1.0"
description = ""
authors = ["Michal Puškáč <133041741+michalpuskac@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
